syntax = "proto3";

package dml;

import "node_def.proto";

message InitNodeRequest {
  NodeDef node = 1;
}

message InitNodeResponse {
}
